k8s/check-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: check-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: check
  template:
    metadata:
      labels:
        app: check
    spec:
      containers:
        - name: check
          image: nueng1996/check
