k8s/exp-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exp-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exp
  template:
    metadata:
      labels:
        app: exp
    spec:
      containers:
        - name: exp
          image: nueng1996/exp
